able to parse mdx content to html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
         </div>
         <div class="documentation">
             <div id="information">
-                <h2 id="title">My Awesome API Documentation</h2>
-                <p id="information-description">This is some content on the main part of the page.</p>
+                {{ mdx-content }}
             </div>
             <div class="api" id="get-a-list-of-users">
                 <h3 id="summary">Get a list of users</h3>
