WIP: add mustache deps and able to parse apis from yaml file

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,117 +21,7 @@
                 </div>
                 <div class="right"></div>
             </div>
-            <div class="api" id="get-a-list-of-users">
-                <div class="left">
-                    <h3 id="summary">Get a list of users</h3>
-                    <p id="description">Retrieves a paginated list of users.</p>
-                    <div class="path-parameters">
-                        <p class="parameters-title">Path Parameters</p>
-                        <hr />
-                        <div class="parameters-content">
-                            <ul>
-                                <li class="row">
-                                    <p class="name">page <span>(required)</span></p>
-                                    <div class="schema">
-                                        <p class="type">integer</p>
-                                        <p class="description">Page number (optional)</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="query-parameters">
-                        <p class="parameters-title">Query Parameters</p>
-                        <hr />
-                        <div class="parameters-content">
-                            <ul>
-                                <li class="row">
-                                    <p class="name">page</p>
-                                    <div class="schema">
-                                        <p class="type">integer</p>
-                                        <p class="description">Page number (optional)</p>
-                                        <p class="min">min: 1</p>
-                                        <p class="max">max: 100</p>
-                                    </div>
-                                </li>
-                                <li class="row">
-                                    <p class="name">page</p>
-                                    <div class="schema">
-                                        <p class="type">integer</p>
-                                        <p class="description">Page number (optional)</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="responses">
-                        <h4>Responses</h4>
-                        <div class="item">
-                            <p><span id="status" class="success">200</span> <span id="description">User created successfully</span></p>
-                            <span class="schema">Response Schema: </span><span id="schema">application/json</span>
-                        </div>
-                        <div class="item">
-                            <p><span id="status" class="failed">400</span> <span id="description">Bad request (invalid user data)</span></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="method-endpoint">
-                        <p><span class="method green">GET</span><span class="endpoint">/users</span></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="api" id="get-details-of-a-specific-user">
-                <div class="left">
-                    <h3 id="summary">Get details of a specific user</h3>
-                    <p id="description">Retrieves information about a user by their ID.</p>
-                    <div class="path-parameters">
-                        <p class="parameters-title">Path Parameters</p>
-                        <hr />
-                        <div class="parameters-content">
-                            <ul>
-                                <li class="row">
-                                    <p class="name">page <span>(required)</span></p>
-                                    <div class="schema">
-                                        <p class="type">integer</p>
-                                        <p class="description">Page number (optional)</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="query-parameters">
-                        <p class="parameters-title">Query Parameters</p>
-                        <hr />
-                        <div class="parameters-content">
-                            <ul>
-                                <li class="row">
-                                    <p class="name">page</p>
-                                    <div class="schema">
-                                        <p class="type">integer</p>
-                                        <p class="description">Page number (optional)</p>
-                                        <p class="min">min: 1</p>
-                                        <p class="max">max: 100</p>
-                                    </div>
-                                </li>
-                                <li class="row">
-                                    <p class="name">page</p>
-                                    <div class="schema">
-                                        <p class="type">integer</p>
-                                        <p class="description">Page number (optional)</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="method-endpoint">
-                        <p><span class="method green">GET</span><span class="endpoint">/users/{userId}</span></p>
-                    </div>
-                </div>
-            </div>
+            {{ apis }}
         </div>
     </main>
 
