able to parse apis to sidebar

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <main>
-        <div class="sidebar">
-            <ul>
-                <li><a href="#get-a-list-of-users">Get a list of users</a></li>
-                <li><a href="#get-details-of-a-specific-user">Get details of a specific user</a></li>
-            </ul>
-        </div>
+        {{ sidebar }}
         <div class="documentation">
             <div id="information">
                 <div class="left">
