--- a/templates/styles/style.css
+++ b/templates/styles/style.css
@@ -115,8 +115,7 @@ code {
 
 .left {
     flex: 2;
-    padding-bottom: 35px;
-    padding-top: 20px;
+    padding: 20px 20px 35px 0;
 }
 
 .right {
@@ -283,4 +282,17 @@ code {
 .none {
     font-family: Courier, monospace;
     margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 1100px) {
+    #information {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .api {
+        border-bottom: 1px solid #28383e;
+        display: flex;
+        flex-direction: column;
+    }
 }
